--- a/test1/index.html
+++ b/test1/index.html
@@ -33,8 +33,14 @@ body{
   align-items:center;
   margin-bottom:18px;
 }
-.qno{font-size:14px;opacity:.85}
-.timer{font-weight:700;font-size:16px}
+.qno{
+  font-size:14px;
+  opacity:.85;
+}
+.timer{
+  font-weight:700;
+  font-size:16px;
+}
 .question{
   font-size:20px;
   font-weight:700;
@@ -46,11 +52,18 @@ body{
   border-radius:8px;
   margin-bottom:12px;
   cursor:pointer;
+  transition:.15s;
 }
 .option:hover{background:#111}
 .option.disabled{pointer-events:none;opacity:.7}
-.correct{background:#0a0;border-color:#0a0}
-.wrong{background:#a00;border-color:#a00}
+.correct{
+  background:#0a0;
+  border-color:#0a0;
+}
+.wrong{
+  background:#a00;
+  border-color:#a00;
+}
 .btn{
   margin-top:20px;
   width:100%;
@@ -69,9 +82,18 @@ body{
   padding:30px;
   text-align:center;
 }
-.result h1{font-size:32px;margin:0}
-.big{font-size:22px;margin:10px 0}
-.list{text-align:left;margin-top:20px}
+.result h1{
+  margin:0 0 10px;
+  font-size:32px;
+}
+.big{
+  font-size:22px;
+  margin:10px 0;
+}
+.list{
+  text-align:left;
+  margin-top:20px;
+}
 hr{border:0;border-top:1px solid #333;margin:20px 0}
 </style>
 </head>
@@ -83,7 +105,7 @@ hr{border:0;border-top:1px solid #333;margin:20px 0}
 </div>
 
 <script>
-/* ================= QUESTIONS ================= */
+/* QUESTIONS (UNCHANGED CONTENT) */
 const questions = [
 {q:"Widgets in Windows 11 are powered primarily by which service?",o:["Windows Explorer","Microsoft Store","Microsoft Edge WebView2","Azure Services"],a:2},
 {q:"The “Quick Settings Panel” in Windows 11 opens using which method?",o:["Win + X","Win + S","Win + A","Ctrl + A"],a:2},
@@ -169,57 +191,40 @@ const questions = [
 {q:"Windows Terminal uses which format for customization?",o:["XML","YAML","JSON","INI"],a:2}
 ];
 
-/* ================= SHUFFLE UTILS ================= */
-function shuffle(arr){
-  for(let i=arr.length-1;i>0;i--){
-    const j=Math.floor(Math.random()*(i+1));
-    [arr[i],arr[j]]=[arr[j],arr[i]];
-  }
-}
+/* STATE */
+let index = 0;
+let answers = new Array(questions.length).fill(null);
+let timer = null;
+let timeLeft = 15;
+let totalTime = 0;
+let locked = false;
 
-/* Shuffle questions ONCE */
-shuffle(questions);
-
-/* ================= STATE ================= */
-let index=0;
-let answers=[];
-let timer=null;
-let timeLeft=15;
-let totalTime=0;
-let locked=false;
-
-/* ================= RENDER ================= */
+/* RENDER */
 function render(){
-  locked=false;
-  timeLeft=15;
+  locked = false;
+  timeLeft = 15;
+  const q = questions[index];
 
-  let qObj = questions[index];
-
-  /* shuffle options safely */
-  let opts=[...qObj.o];
-  shuffle(opts);
-  qObj.shuffledOpts = opts;
-  qObj.correctIndex = opts.indexOf(qObj.a);
-
-  document.getElementById("quiz").innerHTML=`
+  document.getElementById("quiz").innerHTML = `
     <div class="top">
       <div class="qno">Question ${index+1} / ${questions.length}</div>
       <div class="timer" id="timer">⏱ 15s</div>
     </div>
-    <div class="question">${qObj.q}</div>
-    ${opts.map((op,i)=>`<div class="option" onclick="select(${i})">${op}</div>`).join("")}
+    <div class="question">${q.q}</div>
+    ${q.o.map((op,i)=>`<div class="option" onclick="select(${i})">${op}</div>`).join("")}
   `;
 
   startTimer();
 }
 
-/* ================= TIMER ================= */
+/* TIMER */
 function startTimer(){
   clearInterval(timer);
-  timer=setInterval(()=>{
+  timer = setInterval(()=>{
     timeLeft--;
     totalTime++;
-    document.getElementById("timer").textContent=`⏱ ${timeLeft}s`;
+    document.getElementById("timer").textContent = `⏱ ${timeLeft}s`;
+
     if(timeLeft<=0){
       clearInterval(timer);
       autoFail();
@@ -227,74 +232,73 @@ function startTimer(){
   },1000);
 }
 
-/* ================= AUTO FAIL ================= */
+/* AUTO FAIL */
 function autoFail(){
   if(locked) return;
-  locked=true;
-  answers[index]=-1;
+  locked = true;
+  answers[index] = -1;
 
-  const opts=document.querySelectorAll(".option");
+  const opts = document.querySelectorAll(".option");
   opts.forEach(o=>o.classList.add("disabled"));
-  opts[questions[index].correctIndex].classList.add("correct");
+  opts[questions[index].a].classList.add("correct");
 
   document.getElementById("quiz").insertAdjacentHTML(
-    "beforeend",`<button class="btn" onclick="next()">Next</button>`
+    "beforeend",
+    `<button class="btn" onclick="next()">Next</button>`
   );
 }
 
-/* ================= SELECT ================= */
+/* SELECT */
 function select(i){
   if(locked) return;
-  locked=true;
+  locked = true;
   clearInterval(timer);
 
-  answers[index]=i;
-  const q=questions[index];
-  const opts=document.querySelectorAll(".option");
+  answers[index] = i;
+  const q = questions[index];
+  const opts = document.querySelectorAll(".option");
   opts.forEach(o=>o.classList.add("disabled"));
 
-  if(i===q.correctIndex){
-    opts[i].classList.add("correct");
-  }else{
+  if(i===q.a) opts[i].classList.add("correct");
+  else{
     opts[i].classList.add("wrong");
-    opts[q.correctIndex].classList.add("correct");
+    opts[q.a].classList.add("correct");
   }
 
   document.getElementById("quiz").insertAdjacentHTML(
-    "beforeend",`<button class="btn" onclick="next()">Next</button>`
+    "beforeend",
+    `<button class="btn" onclick="next()">Next</button>`
   );
 }
 
-/* ================= NEXT ================= */
+/* NEXT */
 function next(){
   index++;
   if(index<questions.length) render();
   else showResult();
 }
 
-/* ================= RESULT ================= */
+/* RESULT */
 function showResult(){
   clearInterval(timer);
-  let score=0;
-  let wrong=[];
-
-  questions.forEach((q,i)=>{
-    if(answers[i]===q.correctIndex) score++;
-    else wrong.push({no:i+1,q:q.q,ans:q.a});
+  let score=0,wrong=[];
+  answers.forEach((a,i)=>{
+    if(a===questions[i].a) score++;
+    else wrong.push({no:i+1,q:questions[i].q,ans:questions[i].o[questions[i].a]});
   });
+
+  let feedback =
+    totalTime <= questions.length*10 ? "Excellent speed – interview ready" :
+    totalTime <= questions.length*15 ? "Good speed – needs slight improvement" :
+    "Slow – practice timed tests";
 
   document.getElementById("quiz").style.display="none";
   document.getElementById("result").style.display="block";
 
-  let feedback =
-    totalTime<=questions.length*10 ? "Excellent speed – interview ready" :
-    totalTime<=questions.length*15 ? "Good speed – needs improvement" :
-    "Slow – practice timed tests";
-
-  document.getElementById("result").innerHTML=`
+  document.getElementById("result").innerHTML = `
     <h1>Final Result</h1>
     <div class="big">Score: ${score} / ${questions.length}</div>
-    <div class="big">Time Taken: ${totalTime}s</div>
+    <div class="big">Total Time: ${totalTime}s</div>
     <div class="big">${feedback}</div>
     <hr>
     <div class="list">
