--- a/test2/index.html
+++ b/test2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Enterprise Windows & M365 – Complete Assessment</title>
+<title>Enterprise Windows & M365 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 *{box-sizing:border-box}
